--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Firebase (module) -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getDatabase, ref, push, set, update, onValue, remove } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+    import { getDatabase, ref, push, set, update, onValue, remove, get } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
     // Configuração Firebase
     const firebaseConfig = {
@@ -52,10 +52,13 @@
     const formatarBRL = valor =>
       valor.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
 
-    // Inicialização: garantir nó meta e carregar dados
-    function init() {
-      // cria nó meta se não existir (update cria automaticamente)
-      update(ref(db, `usuarios/${USER_ID}/meta`), { saldoInicial: 0 }).catch(()=>{});
+    // Inicialização: só cria nó meta se não existir
+    async function init() {
+      const metaRef = ref(db, `usuarios/${USER_ID}/meta`);
+      const snap = await get(metaRef);
+      if (!snap.exists()) {
+        await set(metaRef, { saldoInicial: 0 });
+      }
       carregarDados();
     }
 
@@ -103,7 +106,6 @@
           total: totalNovo
         });
       } else {
-        // quantidade inválida: zera total
         await update(ref(db, `usuarios/${USER_ID}/compras/${key}`), {
           quantidade: isNaN(qtdNum) ? 0 : Math.max(qtdNum, 0),
           total: 0
@@ -143,7 +145,7 @@
       await remove(ref(db, `usuarios/${USER_ID}/compras`));
     };
 
-    // Filtro de categoria
+    // Filtro de categoria (local)
     window.filtrarCategoria = function() {
       const filtro = document.getElementById("filtroCategoria").value;
       const linhas = document.querySelectorAll("#tabelaCompras tr");
@@ -311,7 +313,8 @@
       const metaRef = ref(db, `usuarios/${USER_ID}/meta`);
       onValue(metaRef, snap => {
         saldoInicial = Number(snap.val()?.saldoInicial || 0);
-        saldoAtual = saldoInicial - totalCompras;
+        // saldoAtual será recalculado após somar compras
+        document.getElementById("saldoInicial").value = saldoInicial || "";
         atualizarUI();
       });
 
@@ -367,6 +370,7 @@
           acoesCell.appendChild(btnRemover);
         });
 
+        // Recalcula saldo atual com base no saldo inicial persistido e somatório das compras
         saldoAtual = saldoInicial - totalCompras;
         atualizarUI();
       });
@@ -495,4 +499,4 @@
     </table>
   </div>
 </body>
-  </html>
+</html>
